mType/tests/testFiles/error/pass/validTypeOperations.mt
int x = 10;
int y = 20;
int result = x + y;
print(result);

string str1 = "hello";
string str2 = "world";
string combined = str1 + " " + str2;
print(combined);

bool condition = true;
if (condition) {
    print("Condition is true");
}
print("Test passed");